--- a/www/views/main.pug
+++ b/www/views/main.pug
@@ -21,4 +21,6 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
         a.nav-link(href='/channels') Channels
       li.nav-item
         a.nav-link(href='/stats') Stats
+      li.nav-item
+        a.nav-link(href='/api') API
 block content
