--- a/www/views/api.pug
+++ b/www/views/api.pug
@@ -4,12 +4,12 @@ block content
     title Okey bot
     h1
         a(href='/api/cmdlist') /cmdlist
-    p - command list
+    h3 command list
     br
     h1
         a(href='/api/stats') /stats
-    p - bot statistics
+    h3 bot statistics
     br
     h1
         a(href='/api/channels') /channels
-    p - channel list
+    h3 channel list
