--- a/www/views/api.pug
+++ b/www/views/api.pug
@@ -4,12 +4,12 @@ block content
     title Okey bot
     h1
         a(href='/api/cmdlist') /cmdlist
-    h3 command list
+    p command list
     br
     h1
         a(href='/api/stats') /stats
-    h3 bot statistics
+    p bot statistics
     br
     h1
         a(href='/api/channels') /channels
-    h3 channel list
+    p channel list
