--- a/www/views/api.pug
+++ b/www/views/api.pug
@@ -1,7 +1,7 @@
 extends main
 
 block content
-    title Okey bot
+    title API - Okey bot
     h1
         a(href='/api/cmdlist') /cmdlist
     p command list
