--- a/www/views/command.pug
+++ b/www/views/command.pug
@@ -25,6 +25,10 @@ block content
                 td Cooldown
                 td #{command.cooldown} seconds
             tr
+                td Code
+                td
+                    a(href="https://github.com/0Supa/okeybot/blob/main/lib/commands/" + command.name target="_blank") GitHub
+            tr
                 td Preview
                 if command.preview
                     td
