--- a/www/views/command.pug
+++ b/www/views/command.pug
@@ -27,7 +27,7 @@ block content
             tr
                 td Code
                 td
-                    a(href="https://github.com/0Supa/okeybot/blob/main/lib/commands/" + command.name target="_blank") GitHub
+                    a(href="https://github.com/0Supa/okeybot/blob/main/lib/commands/" + command.nameEncoded + ".js" target="_blank") GitHub
             tr
                 td Preview
                 if command.preview
