--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -2,5 +2,29 @@ extends main
 
 block content
     title Okey bot
-    div(class="center")
-        img(src='https://cdn.betterttv.net/emote/6059a9d57493072efdeb2e65/3x' alt='HHopa')
+    div(class="container")
+        h3 Add the bot
+        p If you want the bot added in your channel or a channel that you moderate 
+          br
+          | you can type 
+          strong ?addbot
+          |  in the 
+          a(href='https://www.twitch.tv/popout/okey_bot/chat?popout=') bot's chat
+          br
+          | or 
+          strong
+            | ?addbot 
+            em + (channel name)
+          |  for a channel that you moderate
+          br
+          | - alternatively you can contact 
+          a(href='https://twitch.tv/8supa') 8Supa
+          |  through a whisper
+        hr
+        h3 Remove the bot
+        p
+          | If you want the bot removed from your channel you can perma-ban the bot or you contact 
+          a(href='https://twitch.tv/8supa') 8Supa
+          br
+          strong
+            | Perma-banning the bot will make it immediately leave the channel without coming back when unbanned
