--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -23,8 +23,8 @@ block content
         hr
         h3 Remove the bot
         p
-          | If you want the bot removed from your channel you can perma-ban the bot or you contact 
+          | If you want the bot removed from your channel you can contact  
           a(href='https://twitch.tv/8supa') 8Supa
-          br
-          strong
-            | Perma-banning the bot will make it immediately leave the channel without coming back when unbanned
+          | via the 
+          strong ?suggest 
+          | command or via a whisper, or just ban the bot 4Head
