--- a/www/views/main.pug
+++ b/www/views/main.pug
@@ -1,12 +1,9 @@
 doctype
 link(rel='icon' href='/static/favicon.ico' type='image/x-icon')
 link(rel='stylesheet' href='https://bootswatch.com/4/darkly/bootstrap.min.css')
-link(rel='stylesheet' href='https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap4.min.css')
 script(src="https://code.jquery.com/jquery-3.5.1.min.js")
-script(src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js")
-script(src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap4.min.js")
 style(type="text/css").
-  .navbarImage { width: 1.7rem; height: 1.7rem; } .accessBadge { width: 25px; height: 25px; } th, td { padding: 0.5em !important; background-color: rgba(145, 145, 145, 0.1) !important; color: #fff !important; } th { background-color: black !important; padding: 15px !important; } tr:nth-child(even){ background-color: rgba(145, 145, 145, 0.1); } table { min-width: 500px !important; border-spacing: 1px !important; border-collapse: separate !important; } .form-control { color: black !important; background-color: #e3e3e3 !important; outline: none !important; border: 1px solid #7d7d7d !important; border-radius: 4px !important; } .center { display: table; margin: 0 auto; } body { color: #ababab; }
+  .navbarImage { width: 1.7rem; height: 1.7rem; } .accessBadge { width: 25px; height: 25px; } th, td { padding: 0.5em !important; background-color: rgba(145, 145, 145, 0.1) !important; color: #fff !important; } th { background-color: black !important; padding: 15px !important; } tr:nth-child(even){ background-color: rgba(145, 145, 145, 0.1); } table { min-width: 500px !important; max-width: 1000px; border-spacing: 1px !important; border-collapse: separate !important; } .form-control { color: black !important; background-color: #e3e3e3 !important; outline: none !important; border: 1px solid #7d7d7d !important; border-radius: 4px !important; } .center { display: table; margin: 0 auto; } body { color: #ababab; }
 nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
   a.navbar-brand(href='/')
     img(src='https://cdn.frankerfacez.com/emoticon/275054/1' class='navbarImage' alt='Okey')
