--- a/www/views/channels.pug
+++ b/www/views/channels.pug
@@ -6,7 +6,7 @@ block content
         form(action='/channel' method='GET')
             img(src='https://cdn.betterttv.net/emote/5d0ae0d1aae4851c803d4710/2x')
             input(name='username' type='text' placeholder='Channel name' required)
-            input(type="submit" value="🔎")
+            input(type="submit" value="🔍")
         if error 
             p 
                 b
