--- a/www/views/channel.pug
+++ b/www/views/channel.pug
@@ -5,7 +5,7 @@ block content
         form(action='/channel' method='GET')
             img(src='https://cdn.betterttv.net/emote/5d0ae0d1aae4851c803d4710/2x')
             input(name='username' type='text' placeholder='Check another channel' required)
-            input(type="submit" value="🔎")
+            input(type="submit" value="🔍")
         table(id="channel")
             tr 
                 td ID 
