--- a/www/views/stats.pug
+++ b/www/views/stats.pug
@@ -15,7 +15,7 @@ block content
                 td Available commands
                 td #{commands}
             tr
-                td Channels count where the bot is active in
+                td Active Channels
                 td #{channelCount}
             tr 
                 td Issued commands since last bot restart
