--- a/www/views/channel.pug
+++ b/www/views/channel.pug
@@ -2,11 +2,10 @@ extends main
 block content
     title #{login} - Channel Info - Okey bot
     div(class="center")
-        form(action='/channel' method='GET')
-            img(src='https://cdn.betterttv.net/emote/5d0ae0d1aae4851c803d4710/2x')
-            input(name='username' type='text' placeholder='Check another channel' required)
-            input(type="submit" value="🔍")
-        table(id="channel")
+        form(action='/channel' method='GET' class="d-flex")
+            input(name='username' type='text' placeholder='Check another channel' class='form-control form-control-sm' style='max-width: 200px;' required)
+            input(type="submit" class='btn btn-sm btn-primary' value="🔍")
+        table(id="channel" class='mt-3')
             tr 
                 td ID 
                 td #{id}
