--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -3,7 +3,8 @@ extends main
 block content
     title Okey bot
     div(class="container")
-        h3 Add the bot
+      blockquote(class="blockquote")
+        h2 Add the bot
         p If you want the bot added in your channel or a channel that you moderate 
           br
           | you can type 
@@ -20,11 +21,12 @@ block content
           | - alternatively you can contact 
           a(href='https://twitch.tv/8supa') 8Supa
           |  through a whisper
-        hr
-        h3 Remove the bot
-        p
-          | If you want the bot removed from your channel you can contact  
+      blockquote(class="mt-5 blockquote")
+        h2 Remove the bot
+        p If you want the bot removed from your channel you can contact  
           a(href='https://twitch.tv/8supa') 8Supa 
           | via the 
           strong ?suggest 
-          | command or via a whisper, or just ban the bot 4Head
+          | command or via a whisper
+          br
+          | or just ban the bot 4Head
