--- a/www/views/main.pug
+++ b/www/views/main.pug
@@ -1,4 +1,5 @@
 doctype
+meta(name='viewport' content='width=device-width, initial-scale=1.0')
 link(rel='icon' href='/static/favicon.ico' type='image/x-icon')
 link(rel='stylesheet' href='https://bootswatch.com/4/darkly/bootstrap.min.css')
 script(src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js")
