--- a/www/views/channel.pug
+++ b/www/views/channel.pug
@@ -15,7 +15,7 @@ block content
             tr
                 td Login
                 td
-                    a(href="https://www.twitch.tv/" + login target="_blank") #{login}
+                    a(href=`https://www.twitch.tv/${login}` target="_blank") #{login}
             tr
                 td Prefix
                 td #{prefix}
