--- a/www/views/command.pug
+++ b/www/views/command.pug
@@ -33,4 +33,4 @@ block content
             tr
                 td Code
                 td
-                    a(href="https://github.com/0Supa/okeybot/blob/main/lib/commands/" + encodeURIComponent(command.name) + ".js" target="_blank") GitHub
+                    a(href=`https://github.com/0Supa/okeybot/blob/main/lib/commands/${encodeURIComponent(command.name)}.js` target="_blank") GitHub
