--- a/www/views/stats.pug
+++ b/www/views/stats.pug
@@ -8,7 +8,7 @@ block content
                 td #{uptime}
             tr 
                 td Database Uptime 
-                td #{dbUpime}
+                td #{dbUptime}
             tr 
                 td RAM Usage 
                 td #{ram}mb
