--- a/www/views/channel.pug
+++ b/www/views/channel.pug
@@ -3,7 +3,7 @@ block content
     title #{login} - Channel Info - Okey bot
     div(class="center")
         form(action='/channel' method='GET' class="d-flex")
-            input(name='username' type='text' placeholder='Check another channel' class='form-control form-control-sm' style='max-width: 200px;' required)
+            input(name='username' type='text' placeholder='Check another channel' class='form-control form-control-sm' style='max-width: 200px;' autofocus required)
             input(type="submit" class='btn btn-sm btn-primary' value="🔍")
         table(id="channel" class='mt-3')
             tr 
