--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -3,25 +3,22 @@ extends main
 block content
     title Okey bot
     div(class="container")
-      blockquote(class="blockquote")
+      blockquote(class="blockquote col-lg-8")
         h2 Add the bot
-        p If you want the bot added in your channel or a channel that you moderate 
-          br
-          | you can type 
-          strong ?addbot
-          |  in the 
-          a(href='https://www.twitch.tv/popout/okey_bot/chat?popout=') bot's chat
-          br
+        p If you want the bot added in your channel or a channel that you moderate you can type 
+          strong ?addbot 
+          | in the 
+          a(href='https://www.twitch.tv/popout/okey_bot/chat?popout=') bot's chat 
           | or 
           strong
             | ?addbot 
             em + (channel name)
           |  for a channel that you moderate
           br
-          | - alternatively you can contact 
+          i -   alternatively you can contact 
           a(href='https://twitch.tv/8supa') 8Supa
           |  through a whisper
-      blockquote(class="mt-5 blockquote")
+      blockquote(class="mt-4 blockquote col-lg-6")
         h2 Remove the bot
         p If you want the bot removed from your channel you can contact  
           a(href='https://twitch.tv/8supa') 8Supa 
