--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -8,7 +8,7 @@ block content
         p If you want the bot added in your channel or a channel that you moderate you can type 
           strong ?addbot 
           | in the 
-          a(href='https://www.twitch.tv/popout/okey_bot/chat?popout=') bot's chat 
+          a(href='https://www.twitch.tv/popout/okey_bot/chat?popout=' target="_blank") bot's chat 
           | or 
           strong
             | ?addbot 
@@ -16,14 +16,31 @@ block content
           |  for a channel that you moderate
           br
           i -   alternatively you can contact 
-          a(href='https://twitch.tv/8supa') 8Supa
+          a(href='https://twitch.tv/8supa' target="_blank") 8Supa
           |  through a whisper
+
       blockquote(class="mt-4 blockquote col-lg-6")
         h2 Remove the bot
         p If you want the bot removed from your channel you can contact  
-          a(href='https://twitch.tv/8supa') 8Supa 
+          a(href='https://twitch.tv/8supa' target="_blank") 8Supa 
           | via the 
           strong ?suggest 
           | command or via a whisper
           br
           | or just ban the bot 4Head
+
+      blockquote(class="mt-4 blockquote col-lg-8")
+        h2 Description
+        p Okey_bot provides a variety of fun and utility commands, if you have any suggestions you can use the 
+          b ?suggest 
+          | command
+        p The default command prefix is 
+          b ?
+          | , for example you would run the ping command by typing 
+          b ?ping 
+          | - 
+          i (prefix + command name)
+        p The prefix is customizable per channel with the 
+          b ?prefix 
+          | command, some channels may have a custom prefix set. You can lookup a channel 
+          a(href='/channels') here
