--- a/www/views/stats.pug
+++ b/www/views/stats.pug
@@ -38,4 +38,7 @@ block content
                 td #{qps}
             tr 
                 td PubSub connections 
-                td #{pubsub}
+                td #{pubsub.connections}
+            tr 
+                td PubSub topics 
+                td #{pubsub.topics}
