--- a/www/views/code.pug
+++ b/www/views/code.pug
@@ -10,7 +10,7 @@ block content
         }
 
     div(class="center")
-        h5 Whisper okey_bot this message to link the Spotify account to your Twitch account
+        h5 Whisper okey_bot this message to link the Spotify account with your Twitch account
         div(style="display: flex; justify-content: center;")
             input(class="form-control" id="code" type="text" value=text readonly)
             button(type="button" class="btn btn-primary" onclick="copy()") Copy
