--- a/www/views/main.pug
+++ b/www/views/main.pug
@@ -20,6 +20,8 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
       li.nav-item
         a.nav-link(href='/stats') Stats
       li.nav-item
+        a.nav-link(href='/spotify') Spotify
+      li.nav-item
         a.nav-link(href='/api') API
 div(class='mt-2')
 block content
