--- a/www/views/spotify.pug
+++ b/www/views/spotify.pug
@@ -1,6 +1,7 @@
 extends main
 
 block content
+    title Spotify - Okey bot
     div(class="center")
         a(href="/auth/spotify/login")
-            img(src="https://i.imgur.com/TumMHCe.png")
+            img(src="https://i.imgur.com/TumMHCe.png" width="201" height="35")
