--- a/www/views/code.pug
+++ b/www/views/code.pug
@@ -1,6 +1,7 @@
 extends main
 
 block content
+    title Spotify - Okey bot
     script.
         function copy() {
             var copyText = document.getElementById("code");
