--- a/www/views/command.pug
+++ b/www/views/command.pug
@@ -8,7 +8,7 @@ block content
                 td #{command.name}
             tr 
                 td Aliases 
-                if command.aliases
+                if command.aliases.length
                     td #{command.aliases}
                 else 
                     td N/A
