--- a/www/views/error.pug
+++ b/www/views/error.pug
@@ -2,4 +2,5 @@ extends main
 
 block content
     div(class="center")
+        img(src="https://cdn.betterttv.net/emote/5ef700a8f91de70dea5c43c0/3x")
         h1 #{status} #{message}
