--- a/www/views/channels.pug
+++ b/www/views/channels.pug
@@ -2,7 +2,7 @@ extends main
 block content
     title Channels - Okey bot
     div(class="center")
-        h5 Enter a channel name in which the bot is active to see some basic stats
+        h5 Enter a channel name in which the bot is active for some basic info
         img(src='https://cdn.betterttv.net/emote/5d0ae0d1aae4851c803d4710/2x')
         form(action='/channel' method='GET' class="d-flex")
             input(name='username' type='text' placeholder='Channel name' class='form-control' style='max-width: 250px;' autofocus required)
