change site font to `Noto Sans`

--- a/web/public/global.css
+++ b/web/public/global.css
@@ -1,16 +1,16 @@
 @font-face {
-	font-family: 'Quicksand';
+	font-family: 'Noto Sans';
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/quicksand/v30/6xK-dSZaM9iE8KbpRA_LJ3z8mH9BOJvgkP8o58a-wg.woff2) format('woff2');
+	src: url(https://fonts.gstatic.com/s/notosans/v27/o-0IIpQlx3QUlC5A4PNr5TRA.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 body {
 	color: white;
 	background-color: #222222;
-	font-family: 'Quicksand';
+	font-family: 'Noto Sans';
 	padding-bottom: 40px;
 	max-width: 1000px;
 	margin: 0 auto;
